Html верстка оставшихся экранов и футера, стили от 2-3-го экранов. Пока без фонов.

--- a/src/html/index/_index-section-1.html
+++ b/src/html/index/_index-section-1.html
@@ -1,4 +1,4 @@
-<div id="index__section-1">
+<section id="index__section-1">
     @@include('../general/_header.html')
     <div class="section-1__content">
         <div class="container">
@@ -20,4 +20,4 @@
             </div>
         </div>
     </div>
-</div>
+</section>
