--- a/src/html/index.html
+++ b/src/html/index.html
@@ -16,6 +16,7 @@
     @@include('./index/_index-section-1.html')
     @@include('./index/_index-section-2.html')
     @@include('./index/_index-section-3.html')
+    @@include('./index/_index-section-4.html')
     @@include('./general/_footer.html')
 </div>
 
