Черновой вариант главной страницы на 1920. Пока без фонов.

--- a/src/html/index/_index-section-4.html
+++ b/src/html/index/_index-section-4.html
@@ -1,27 +1,27 @@
-<section id="section-4">
+<section id="index__section-4">
     <div class="container">
         <div class="section-4__title">
             <h2>Как мы работаем</h2>
         </div>
         <div class="section-4__content-wrap flex">
-            <div class="section-4__element">
+            <div class="section-4__element flex">
                 <p class="number">1</p>
-                <p class="text">Консультация
+                <p class="text">Консультация <br>
                     по телефону</p>
             </div>
-            <div class="section-4__element">
+            <div class="section-4__element flex">
                 <p class="number">2</p>
-                <p class="text">Выезд на объект</p>
+                <p class="text">Выезд на <br>объект</p>
             </div>
-            <div class="section-4__element">
+            <div class="section-4__element flex">
                 <p class="number">3</p>
-                <p class="text">Составление
-                    и согласование
+                <p class="text">Составление <br>
+                    и согласование <br>
                     сметы и договора</p>
             </div>
-            <div class="section-4__element">
+            <div class="section-4__element flex">
                 <p class="number">4</p>
-                <p class="text">Выполнение работ</p>
+                <p class="text">Выполнение <br>работ</p>
             </div>
         </div>
     </div>
