Все еще черновой вариант главной страницы на 1920 с фонами.

--- a/src/index.html
+++ b/src/index.html
@@ -83,7 +83,8 @@
         </div>
     </div>
 </section>
-    <section id="index__section-3">
+    <div id="index__section-3-4_wrap">
+        <section id="index__section-3">
     <div class="container">
         <div class="section-3__title">
             <h2>Наши преимущества</h2>
@@ -112,7 +113,7 @@
         </div>
     </div>
 </section>
-    <section id="index__section-4">
+        <section id="index__section-4">
     <div class="container">
         <div class="section-4__title">
             <h2>Как мы работаем</h2>
@@ -140,6 +141,7 @@
         </div>
     </div>
 </section>
+    </div>
     <footer id="footer">
     <div class="container footer__content flex">
         <picture class="footer-logo">
