--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,8 +15,10 @@
 <div id="wrapper">
     @@include('./index/_index-section-1.html')
     @@include('./index/_index-section-2.html')
-    @@include('./index/_index-section-3.html')
-    @@include('./index/_index-section-4.html')
+    <div id="index__section-3-4_wrap">
+        @@include('./index/_index-section-3.html')
+        @@include('./index/_index-section-4.html')
+    </div>
     @@include('./general/_footer.html')
 </div>
 
